bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: ')' expected but ';' found.
  if (weekday==false;vacation==false) return true
                    ^SleepIn:3: error: ';' expected but ')' found.
  if (weekday==false;vacation==false) return true
                                    ^SleepIn:4: error: ';' expected but ')' found.
  if (weekday==true;vacation==true) return true
                                  ^