bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if (weekday==false;vacation==false) return true
  if (weekday==true;vacation==true) return true
  else return false
}